# dex-mcp-server-rust

./: .env.example  .gitignore  BASELINE_PERFORMANCE.md  CHANGELOG.md  CLAUDE.md  CRUD_TESTS_AND_UPDATE_FIXES.md  Cargo.toml  E2E_TESTS_SUMMARY.md  FIX_SUMMARY.md  LOGGING_GUIDE.md  MILESTONE_2.2_COMPLETE.md  PERFORMANCE_RESULTS.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  README.md  architecture-improvements.md  architecture-review.md  claude_desktop_config_example.json  end_to_end_test_plan.md  rust_port_plan.md  test_reminder_ser.rs
.claude/: settings.local.json
.claude/agents/: system-architect.md
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  release.yml
benches/: search_benchmarks.rs
docs/: OBSERVABILITY.md  PHASE3_IMPROVEMENTS.md
scripts/: ci-check.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/cache/: mod.rs  timed_cache.rs
src/client/: async_wrapper.rs  mod.rs
src/domain/: contact_id.rs  email.rs  errors.rs  mod.rs  phone.rs
src/matching/: fuzzy_matcher.rs  mod.rs
src/metrics/: mod.rs
src/models/: contact.rs  mod.rs  note.rs  reminder.rs
src/observability/: metrics.rs  mod.rs
src/repositories/: dex_contact_repository.rs  dex_note_repository.rs  dex_reminder_repository.rs  mod.rs  traits.rs
src/search/: full_text_index.rs  mod.rs
src/server/: handlers.rs  mod.rs
src/services/: contact_service.rs  history_service.rs  mod.rs  note_service.rs  reminder_service.rs
src/tools/: discovery.rs  enrichment.rs  history.rs  mod.rs  search.rs
tests/: client_tests.rs  test_characterization_discovery.rs  test_characterization_enrichment.rs  test_characterization_history.rs  test_client_api.rs  test_contact_discovery.rs  test_contact_enrichment.rs  test_contacts_crud.rs  test_fuzzy_matching.rs  test_mcp_server.rs  test_mock_repositories.rs  test_notes_crud.rs  test_relationship_history.rs  test_reminders_crud.rs
tests/characterization/: mod.rs  test_discovery.rs  test_enrichment.rs  test_history.rs
tests/e2e/: fixtures.rs  mod.rs
tests/mocks/: mock_contact_repository.rs  mock_note_repository.rs  mock_reminder_repository.rs  mod.rs
