[package]
name = "dex-mcp-server"
version = "0.9.0"
edition = "2021"
authors = ["Dex MCP Contributors"]
description = "MCP (Model Context Protocol) server for Dex Personal CRM"
license = "MIT"

[dependencies]
# MCP Protocol (official SDK)
rmcp = { version = "0.8", features = ["server", "transport-io"] }

# Async runtime (minimal features for MCP SDK)
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "sync", "time"] }

# HTTP client (lightweight, sync)
# Using native-tls for Windows compatibility (avoids cmake dependency)
ureq = { version = "2", features = ["json"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
# Note: sonic-rs can be added later for 2-3x performance boost
# sonic-rs = "0.3"

# Fuzzy matching (6-10x faster than alternatives)
nucleo = "0.5"
nucleo-matcher = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait support
async-trait = "0.1"

# Async utilities for parallel operations
futures = "0.3"

# Environment variables
dotenvy = "0.15"

# Logging (minimal, stderr only)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for text processing
regex = "1"
once_cell = "1"

# URL encoding for query parameters
urlencoding = "2"

# Date/time handling for timestamps
chrono = "0.4"

[dev-dependencies]
# HTTP mocking for tests
mockito = "1"

# Test utilities
tokio-test = "0.4"

# Serial test execution (prevent env var conflicts)
serial_test = "3"

# Date/time utilities for test fixtures
chrono = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "search_benchmarks"
harness = false

[profile.release]
# Optimize for size and performance
opt-level = "z"         # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization (slower compile)
strip = true            # Strip symbols
panic = "abort"         # Smaller binary
